# yocto

./: README.md  build.cmake  clean.cmake  nosdk.cmake  purge.cmake
src/: CMakeLists.txt
src/R++/: CMakeLists.txt  Makevars
src/alchemy/: CMakeLists.txt
src/alchemy/docs/: alchemy.tex  makefile
src/alchemy/tests/: CMakeLists.txt  acetic.lua  boot-ab.lua  carbonic.lua  main.cpp  phosphoric.lua  test-boot.cpp  test-eff.cpp  test-equilibra.cpp  test-equilibrium.cpp  test-library.cpp  test-lua.cpp  test-ode.cpp  test-titration.cpp  test-var.cpp  water.lua
src/bz2++/: CMakeLists.txt
src/bz2++/tests/: CMakeLists.txt
src/chem/: CMakeLists.txt
src/chem/tests/: test-eff.cpp
src/chemical/: CMakeLists.txt
src/chemical/tests/: CMakeLists.txt  boot-ab.lua  main.cpp  phosphoric.lua  simple.lua  test-balance.cpp  test-boot.cpp  test-eqs.cpp  test-library.cpp  test-lua.cpp  test-normalize.cpp
src/fame/: CMakeLists.txt
src/fame/tests/: CMakeLists.txt  main-multi.cpp  main-par.cpp  main.cpp  test-cmesh.cpp  test-domain.cpp  test-domains.cpp  test-field.cpp  test-layout.cpp  test-layouts.cpp  test-mesh.cpp  test-rmesh.cpp  test-split.cpp  test-stl.cpp  test-tr2d.cpp  test-types.cpp
src/fltk/: CMakeLists.txt
src/gems/: CMakeLists.txt
src/gfx/: CMakeLists.txt  yocto-to-jpg.cpp
src/gfx/docs/: piv.aux
src/gfx/tests/: CMakeLists.txt  main.cpp  test-detect.cpp  test-draw.cpp  test-edges.cpp  test-ops.cpp  test-perf.cpp  test-pixmap.cpp  test-tiff.cpp
src/ink/: CMakeLists.txt
src/ink/named_colors/: make_named_colors.cpp
src/ink/ramps/: make_ramp.cpp
src/ink/tests/: CMakeLists.txt  main.cpp  test-bitmap.cpp  test-blob.cpp  test-blur.cpp  test-dct.cpp  test-diff.cpp  test-draw.cpp  test-edges.cpp  test-edm.cpp  test-fft.cpp  test-fmt.cpp  test-grads.cpp  test-hist.cpp  test-local.cpp  test-mask.cpp  test-ops.cpp  test-par.cpp  test-pixmaps.cpp  test-ramps.cpp  test-stencil.cpp  test-types.cpp
src/json/: CMakeLists.txt
src/json/tests/: CMakeLists.txt  main.cpp  test-load.cpp  test-value.cpp
src/json_old/: CMakeLists.txt
src/kr/: CMakeLists.txt
src/kr/tests/: main.cpp  test-bc.cpp  test-collide.cpp  test-sc.cpp
src/lang/: CMakeLists.txt  yocto-dynamo.cpp
src/lang/nwsrt/: CMakeLists.txt  nwsrt.cpp  nwsrt.db  nwsrt.def  nwsrt.g  nwsrt.inc  nwsrt.pl  nwsrt3to8.pl  nwsrt9to.pl
src/lang/tests/: CMakeLists.txt  calc.g  dyn-json.cpp  gen-netsort.cpp  json.g  json.inc  lex.g  main.cpp  module.g  netsort.db  netsort.def  netsort.g  netsort.inc  seem.g  simple.g  test-dyn.cpp  test-gen.cpp  test-gram.cpp  test-json.cpp  test-match.cpp  test-module.cpp  test-parser.cpp  test-pattern.cpp  test-posix.cpp  test-regexp.cpp  test-scan.cpp  test-source.cpp  test-token.cpp  test-trans.cpp  test-types.cpp  test.g
src/lingua/: CMakeLists.txt
src/lingua/gram2defs/: CMakeLists.txt
src/lingua/tests/: main.cpp  simple.g  test-cpp.cpp  test-match.cpp
src/lua++/: CMakeLists.txt
src/lua++/tests/: CMakeLists.txt  main.cpp  test-func.cpp  test-funcs.cpp  test-state.cpp  test-table.cpp
src/lua++_old/: CMakeLists.txt
src/mk/: CMakeLists.txt
src/mk/tests/: CMakeLists.txt  main.cpp  test-adjoint.cpp  test-bsplines.cpp  test-cwt.cpp  test-diag.cpp  test-drvs.cpp  test-expand.cpp  test-fft1.cpp  test-fftn.cpp  test-fit.cpp  test-fit0.cpp  test-glsf.cpp  test-grad.cpp  test-hull2d.cpp  test-ihist.cpp  test-intg.cpp  test-linear.cpp  test-lu.cpp  test-matrix.cpp  test-michaelis.cpp  test-mtx.cpp  test-newt.cpp  test-newton.cpp  test-opt.cpp  test-peaks.cpp  test-poly.cpp  test-psd.cpp  test-shapes.cpp  test-sparse.cpp  test-spike.cpp  test-spline.cpp  test-stat.cpp  test-svd.cpp  test-symker.cpp  test-tao.cpp  test-tri-diag.cpp  test-trigo.cpp  test-z.cpp  test-zero.cpp
src/mpi/: CMakeLists.txt
src/mpi/docs/: split.tex
src/mpi/tests/: CMakeLists.txt  main.cpp  test-async.cpp  test-init.cpp  test-over.cpp  test-split.cpp  test-sr.cpp
src/mpl/: CMakeLists.txt
src/mpl/tests/: CMakeLists.txt
src/net/: CMakeLists.txt
src/net/tests/: test-io.cpp
src/ocl/: CMakeLists.txt
src/ocl/tests/: CMakeLists.txt  main.cpp  test-types.cpp
src/old/: crew.hpp  kernel-executor.cpp  kernel-executor.hpp  vpu.cpp  vpu.hpp
src/python/: CMakeLists.txt
src/seem/: CMakeLists.txt
src/seem/tests/: CMakeLists.txt  main.cpp  test-compiler.cpp
src/spade/: CMakeLists.txt
src/spade/tests/: CMakeLists.txt  main.cpp  test-dispatch.cpp  test-domain.cpp  test-field.cpp  test-layout.cpp  test-rectilinear-mesh.cpp  test-split.cpp  test-stl.cpp  test-types.cpp
src/visit/: CMakeLists.txt
src/visit/tests/: CMakeLists.txt  main.cpp  test-fame-mesh.cpp  test-heat.cpp  test-heat1d.cpp  test-ipso.cpp  test-loop.cpp  test-spade-mesh-split.cpp  test-spade-mesh.cpp  test-spade.cpp
src/yocto/: CMakeLists.txt
src/yocto/bz2/: CMakeLists.txt
src/yocto/dll/: CMakeLists.txt
src/yocto/file2data/: CMakeLists.txt
src/yocto/jbig/: CMakeLists.txt
src/yocto/jpeg/: CMakeLists.txt  jconfig.h
src/yocto/lua/: CMakeLists.txt
src/yocto/lzo/: CMakeLists.txt
src/yocto/png/: CMakeLists.txt  png_files.cmake  pnglibconf.h  setup_with_bsd.cmake
src/yocto/png_demo/: CMakeLists.txt
src/yocto/rcpack/: CMakeLists.txt
src/yocto/tests/: CMakeLists.txt  main.cpp  netsort.inc  support.hpp  test-ansi.cpp  test-bwt.cpp  test-carver.cpp  test-catalog.cpp  test-condition.cpp  test-dict.cpp  test-dist.cpp  test-dualmap.cpp  test-dualset.cpp  test-duration.cpp  test-engine.cpp  test-esf.cpp  (+58 more)
src/yocto/tests-ipso/: CMakeLists.txt  main-par.cpp  main.cpp  test-cmesh.cpp  test-ipso-coms.cpp  test-ipso-divide.cpp  test-ipso-opt.cpp  test-ipso-vtk.cpp  test-ipso-wksp.cpp  test-ipso-xbuffer.cpp  test-ipso-xcom.cpp  test-ipso.cpp  test-mesh.cpp  test-onesub.cpp  test-pmesh.cpp  test-rmesh.cpp  test-stl.cpp  test-subopt.cpp  test-subset.cpp  test-vtk.cpp  test-wksp.cpp
src/yocto/tests-mpl/: CMakeLists.txt  main-par.cpp  main.cpp  test-add.cpp  test-hash.cpp  test-mem.cpp  test-mpn.cpp  test-mpq.cpp  test-mpz.cpp  test-mul.cpp  test-prm.cpp  test-rand.cpp  test-rsa.cpp  test-sub.cpp
src/z++/: CMakeLists.txt
(+789 files in other folders)
