PROJECT(y-png)

INCLUDE_DIRECTORIES(../zlib ${CMAKE_CURRENT_BINARY_DIR}/../zlib)
INCLUDE(png_files.cmake)

SET(PNG_HEADERS ${PNG_PUBLIC_HEADERS} ${PNG_PRIVATE_HEADERS})
LIST(REMOVE_DUPLICATES PNG_HEADERS)

ADD_LIBRARY( y-png STATIC ${PNG_SOURCES} ${PNG_HEADERS} )
INSTALL( FILES ${PNG_PUBLIC_HEADERS} DESTINATION include/yocto/png )
INSTALL( TARGETS y-png ARCHIVE       DESTINATION lib )

IF(YOCTO_BUILD_TESTS)
	ADD_EXECUTABLE(pngtest pngtest.c)
	TARGET_LINK_LIBRARIES(pngtest y-png y-z)
	IF(NOT WIN32)
		TARGET_LINK_LIBRARIES(pngtest m)
	ENDIF()
	ENABLE_TESTING()
	ADD_TEST(PNGtest pngtest ${CMAKE_CURRENT_SOURCE_DIR}/pngtest.png)
ENDIF()
